--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
     <link rel="preload" href="/invite.svg" as="image">
     <link rel="preload" href="/ref.svg" as="image">
     <script src='//whephiwums.com/vignette.min.js' data-zone='8846433' data-sdk='show_8846433'></script>
-    <title>MEGADOGSs Airdrop</title>
+    <title>MONEY CATS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
