--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
     <link rel="preload" href="/earn.svg" as="image">
     <link rel="preload" href="/invite.svg" as="image">
     <link rel="preload" href="/ref.svg" as="image">
-    <script src='//whephiwums.com/vignette.min.js' data-zone='8846433' data-sdk='show_8846433'></script>
+    <script src='//whephiwums.com/sdk.js' data-zone='8978173' data-sdk='show_8978173'></script>
     <title>MONEY CATS</title>
   </head>
   <body>
