--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!-- <script src="https://telegram.org/js/telegram-web-app.js"></script> -->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="preload" href="/loader.webp" as="image">
     <link rel="preload" href="/loading.webp" as="image">
     <link rel="preload" href="/twitter.svg" as="image">
