--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
     <link rel="preload" href="/fanbg.webp" as="image">
     <link rel="preload" href="/twitter2.webp" as="image">
     <link rel="preload" href="/thumb3.webp" as="image">
-    <link rel="preload" href="/stars.svg" as="image">
+    <link rel="preload" href="/logo.jfif" as="image">
     <link rel="preload" href="/starsorange.svg" as="image">
     <link rel="preload" href="/stars2.svg" as="image">
     <link rel="preload" href="/telegramc.svg" as="image">
