--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
     <link rel="preload" href="/ton.png" as="image">
     <link rel="preload" href="/tons.svg" as="image">
     <link rel="preload" href="/ton.svg" as="image">
-    <link rel="preload" href="/fan.webp" as="image">
+    <link rel="preload" href="/animation.png" as="image">
     <link rel="preload" href="/fanbg.webp" as="image">
     <link rel="preload" href="/twitter2.webp" as="image">
     <link rel="preload" href="/thumb3.webp" as="image">
